--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-jwt-test",
   "version": "1.0.0",
   "description": "testing jwt with node",
+  "engines": {
+    "node": "12.x"
+  },
   "main": "server.js",
   "repository": {
     "type": "git",
